--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-jasmine": "1.0.2",
-    "karma-typescript-preprocessor": "0.3.0"
+    "karma-typescript-preprocessor": "0.3.0",
+    "coveralls": "2.11.15",
+    "karma-coverage": "1.1.1",
+    "karma-remap-istanbul": "0.4.0",
+    "karma-sourcemap-loader": "0.3.7"
   },
   "dependencies": {
     "jquery": "3.1.1",
