Added 'locale' property for MockIVisualHost from API 1.4 (#10)
* Added 'locale' property for MockIVisualHost from API 1.4

* New package was built

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
     "experimentalDecorators": true,
     "declaration": true,
     "target": "es5",
-    "outFile": "./lib/index.js",
-    "sourceMap": true
+    "outFile": "./lib/index.js"
   },
   "files": [
-    "node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.3.0/PowerBI-visuals.d.ts",
+    "node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.4.0/PowerBI-visuals.d.ts",
     "typings/index.d.ts",
     "src/common.ts",
+    "src/mocks/mockILocale.ts",
     "src/mocks/mockIColorPalette.ts",
     "src/mocks/mockISelectionId.ts",
     "src/mocks/mockISelectionIdBuilder.ts",
