For compatible with API 1.6 a few features were added  (#11)
* Added mockIAllowInteractions for allowInteractions property in VisualHost
* Added empty applySelectionFilter func to MockISelectionManager for conformity with ISelectionManager

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "typings/index.d.ts",
     "src/common.ts",
     "src/mocks/mockILocale.ts",
+    "src/mocks/mockIAllowInteractions.ts",
     "src/mocks/mockIColorPalette.ts",
     "src/mocks/mockISelectionId.ts",
     "src/mocks/mockISelectionIdBuilder.ts",
