Migrates to ChromeHeadLess (#31)

--- a/package.json
+++ b/package.json
@@ -25,20 +25,22 @@
     "test": "karma start",
     "pretest": "npm run build:map",
     "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\"",
+    "postinstall": "npm run typings:install",
     "typings": "typings",
     "typings:install": "typings install"
   },
   "devDependencies": {
-    "coveralls": "2.11.15",
+    "coveralls": "3.0.1",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.0.2",
-    "karma-remap-istanbul": "0.4.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.2",
+    "karma-jasmine": "1.1.2",
+    "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-typescript-preprocessor": "0.3.0",
     "powerbi-visuals-tools": "1.11.0",
+    "puppeteer": "^1.5.0",
     "tslint": "4.4.2",
     "tslint-microsoft-contrib": "^4.0.1",
     "typescript": "2.1.4",
