--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "build": "tsc",
     "test": "karma start",
     "pretest": "npm run build:map",
-    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\"",
-    "postinstall": "npm run typings:install",
-    "typings": "typings",
-    "typings:install": "typings install"
+    "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\""
   },
   "devDependencies": {
+    "@types/d3": "3.5.38",
+    "@types/jasmine": "2.8.8",
+    "@types/jquery": "2.0.41",
+    "@types/lodash": "4.14.30",
+    "@types/jasmine-jquery": "1.5.32",
     "coveralls": "3.0.1",
     "jasmine": "2.5.2",
     "karma": "1.3.0",
@@ -43,8 +45,7 @@
     "puppeteer": "^1.5.0",
     "tslint": "4.4.2",
     "tslint-microsoft-contrib": "^4.0.1",
-    "typescript": "2.1.4",
-    "typings": "2.0.0"
+    "typescript": "2.1.4"
   },
   "dependencies": {
     "jquery": "3.1.1",
