mock for storageService has been added (#40)
* mock for storageService has been added

* changes after CR

* new record in CHANGELOG.md and version increasing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "src/mocks/mockITelemetryService.ts",
     "src/mocks/mockIAuthenticationService.ts",
     "src/mocks/mockVisualHost.ts",
+    "src/mocks/mockIStorageService.ts",
     "src/mocks/mocks.ts",
     "src/helpers/helpers.ts",
     "src/helpers/color.ts",
