--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "1.3.3",
-  "description": "TestUtils",
+  "version": "2.2.0",
+  "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
+  "module": "lib/index.js",
+  "jsnext:main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Microsoft/powerbi-visuals-utils-testutils.git"
@@ -16,41 +20,54 @@
     "url": "https://github.com/Microsoft/powerbi-visuals-utils-testutils/issues"
   },
   "homepage": "https://github.com/Microsoft/powerbi-visuals-utils-testutils#readme",
-  "files": [
-    "lib"
-  ],
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "build:map": "tsc --sourceMap",
     "build": "tsc",
+    "build:map": "tsc --sourceMap",
     "test": "karma start",
-    "pretest": "npm run build:map",
+    "pretest": "npm run lint",
     "lint": "tslint -r \"node_modules/tslint-microsoft-contrib\"  \"+(src|test)/**/*.ts\""
   },
   "devDependencies": {
-    "@types/d3": "3.5.38",
-    "@types/jasmine": "2.8.8",
-    "@types/jasmine-jquery": "1.5.32",
-    "@types/jquery": "2.0.41",
-    "@types/lodash": "4.14.30",
-    "coveralls": "3.0.1",
-    "jasmine": "2.5.2",
-    "karma": "^4.1.0",
+    "@types/d3-timer": "1.0.9",
+    "@types/jasmine": "3.3.12",
+    "@types/jasmine-jquery": "1.5.33",
+    "@types/jquery": "3.3.29",
+    "@types/karma": "3.0.2",
+    "@types/lodash-es": "4.17.3",
+    "@types/node": "^8.0.56",
+    "@types/webpack": "4.4.32",
+    "chalk": "^2.1.0",
+    "coveralls": "3.0.3",
+    "jasmine": "3.4.0",
+    "jasmine-jquery": "2.1.1",
+    "karma": "4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.2",
-    "karma-jasmine": "1.1.2",
+    "karma-jasmine": "2.0.1",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
+    "karma-typescript": "4.0.0",
     "karma-typescript-preprocessor": "0.4.0",
-    "powerbi-visuals-tools": "2.5.0",
-    "puppeteer": "1.15.0",
+    "karma-webpack": "3.0.5",
+    "powerbi-visuals-api": "2.6.0",
+    "puppeteer": "1.16.0",
+    "ts-loader": "6.0.1",
+    "ts-node": "^3.3.0",
     "tslint": "5.16.0",
     "tslint-microsoft-contrib": "6.1.1",
-    "typescript": "2.1.4"
+    "typescript": "^3.0.1",
+    "webpack": "4.32.1",
+    "webpack-node-externals": "1.7.2",
+    "karma-coverage-istanbul-reporter": "2.0.5"
   },
   "dependencies": {
-    "d3": "3.5.5",
-    "jasmine-jquery": "2.1.1",
-    "jquery": "^3.4.0",
-    "lodash": "^4.17.11"
+    "d3-array": "^1.2.1",
+    "d3-timer": "1.0.9",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "jquery": "3.4.1",
+    "lodash-es": "4.17.11"
   }
 }
