--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,23 @@
 {
   "compilerOptions": {
+    "allowJs": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "declaration": true,
-    "target": "es5",
-    "outFile": "./lib/index.js"
+    "sourceMap": true,
+    "module": "ES2015",
+    "moduleResolution": "node",
+    "target": "ES2015",
+    "lib": [
+      "es2015",
+      "dom"
+    ],
+    "outDir": "./lib"
   },
   "files": [
-    "node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.11.0/PowerBI-visuals.d.ts",
-    "src/common.ts",
-    "src/mocks/mockILocale.ts",
-    "src/mocks/mockIAllowInteractions.ts",
-    "src/mocks/mockIColorPalette.ts",
-    "src/mocks/mockISelectionId.ts",
-    "src/mocks/mockISelectionIdBuilder.ts",
-    "src/mocks/mockISelectionManager.ts",
-    "src/mocks/mockITooltipService.ts",
-    "src/mocks/mockILocalizationManager.ts",
-    "src/mocks/mockITelemetryService.ts",
-    "src/mocks/mockIAuthenticationService.ts",
-    "src/mocks/mockVisualHost.ts",
-    "src/mocks/mockIStorageService.ts",
-    "src/mocks/mocks.ts",
-    "src/helpers/helpers.ts",
-    "src/helpers/color.ts",
-    "src/helpers/visualTestHelpers.ts",
-    "src/VisualBuilderBase.ts",
-    "src/dataViewBuilder/dataViewBuilder.ts",
-    "src/dataViewBuilder/testDataViewBuilder.ts"
+    "src/index.ts"
+  ],
+  "include": [
+    "src/index.ts"
   ]
 }
