--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "2.3.4",
+  "version": "2.4.0",
   "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -51,7 +51,7 @@
     "karma-typescript": "5.1.0",
     "karma-typescript-preprocessor": "0.4.0",
     "karma-webpack": "4.0.2",
-    "powerbi-visuals-api": "3.2.0",
+    "powerbi-visuals-api": "3.4.0",
     "puppeteer": "5.2.1",
     "snyk": "^1.388.0",
     "ts-loader": "8.0.3",
@@ -67,6 +67,7 @@
     "d3-timer": "2.0.0",
     "istanbul-instrumenter-loader": "3.0.1",
     "lodash-es": "4.17.15",
+    "powerbi-visuals-utils-typeutils": "^2.3.1",
     "uuidv4": "^6.2.3"
   },
   "snyk": true
