--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "powerbi-visuals-utils-testutils",
-  "version": "2.4.2",
+  "version": "2.4.3",
   "description": "powerbi-visuals-utils-testutils",
   "main": "lib/index.js",
   "module": "lib/index.js",
@@ -32,43 +32,42 @@
     "snyk-protect": "snyk protect"
   },
   "devDependencies": {
-    "@types/d3-timer": "1.0.9",
-    "@types/jasmine": "3.5.14",
-    "@types/jquery": "^3.5.1",
-    "@types/karma": "5.0.0",
-    "@types/node": "14.6.2",
-    "@types/webpack": "4.41.21",
-    "chalk": "4.1.0",
-    "coveralls": "3.1.0",
-    "jasmine": "3.6.1",
-    "karma": "^5.2.0",
+    "@types/d3-timer": "3.0.0",
+    "@types/jasmine": "3.10.2",
+    "@types/jquery": "^3.5.10",
+    "@types/karma": "6.3.1",
+    "@types/node": "16.11.12",
+    "@types/webpack": "5.28.0",
+    "chalk": "5.0.0",
+    "coveralls": "3.1.1",
+    "jasmine": "3.10.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "3.1.0",
-    "karma-coverage": "2.0.3",
+    "karma-coverage": "2.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
-    "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.8",
-    "karma-typescript": "5.1.0",
+    "karma-typescript": "5.5.2",
     "karma-typescript-preprocessor": "0.4.0",
-    "karma-webpack": "4.0.2",
-    "powerbi-visuals-api": "3.6.0",
-    "puppeteer": "5.2.1",
-    "snyk": "^1.388.0",
-    "ts-loader": "8.0.3",
-    "ts-node": "9.0.0",
+    "karma-webpack": "5.0.0",
+    "powerbi-visuals-api": "~3.8.0",
+    "puppeteer": "^13.0.0",
+    "snyk": "^1.790.0",
+    "ts-loader": "9.2.6",
+    "ts-node": "^10.4.0",
     "tslint": "6.1.3",
     "tslint-microsoft-contrib": "6.2.0",
-    "typescript": "4.0.2",
-    "webpack": "4.44.1",
-    "webpack-node-externals": "2.5.2"
+    "typescript": "4.5.4",
+    "webpack": "5.65.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "d3-array": "2.8.0",
-    "d3-timer": "2.0.0",
+    "d3-array": "3.1.1",
+    "d3-timer": "3.0.1",
     "istanbul-instrumenter-loader": "3.0.1",
-    "lodash-es": "4.17.15",
+    "lodash-es": "4.17.21",
     "powerbi-visuals-utils-typeutils": "^2.3.1",
-    "uuidv4": "^6.2.3"
+    "uuidv4": "^6.2.12"
   },
   "snyk": true
 }
